# advent-of-code-2024

lean/: Day1.lean  Day2.lean
rust/: Cargo.toml
rust/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  main.rs
rust/src/solutions/: day1.rs  day2.rs  day3.rs
