[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14.0"
regex = "1.12.2"

[[bin]]
name = "day1"
path = "src/day1.rs"

[[bin]]
name = "day2"
path = "src/day2.rs"

[[bin]]
name = "day3"
path = "src/day3.rs"

[[bin]]
name = "day4"
path = "src/day4.rs"
