[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14.0"
lazy_static = "1.5.0"
rayon = "1.11.0"
regex = "1.12.2"

[[bin]]
name = "day1"
path = "src/day1.rs"

[[bin]]
name = "day2"
path = "src/day2.rs"

[[bin]]
name = "day3"
path = "src/day3.rs"

[[bin]]
name = "day4"
path = "src/day4.rs"

[[bin]]
name = "day5"
path = "src/day5.rs"

[[bin]]
name = "day6"
path = "src/day6.rs"
